<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.reporter.DatePickerDialogFragment">


    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/tv_time_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/last_month"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/chip_report_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_report"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            app:chipBackgroundColor="@android:color/darker_gray"
            android:id="@+id/chip_report_year"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <com.google.android.material.chip.Chip
            app:chipBackgroundColor="@android:color/darker_gray"
            android:id="@+id/chip_report_month"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <com.google.android.material.chip.Chip
            app:chipBackgroundColor="@android:color/darker_gray"
            android:id="@+id/chip_report_week"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <com.google.android.material.chip.Chip
            app:chipBackgroundColor="@android:color/darker_gray"
            android:id="@+id/chip_report_day"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>