<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dileit.view.fragment.DialogAddCostumeLeitner">

        <TextView
            android:fontFamily="@font/productsansregular"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_costume_leitner_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_word_or_phrase_in_leitner" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_costume_leitner_info"
            android:id="@+id/txt_layout_leitner_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_input_title"
                android:hint="@string/word_or_phrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_leitner_title"
            android:id="@+id/txt_layout_leitner_def"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="start"
                android:lines="5"
                android:id="@+id/edt_input_def"
                android:hint="@string/translation_or_definition"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_leitner_def"
            android:id="@+id/txt_layout_leitner_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="start"
                android:id="@+id/edt_input_guide"
                android:hint="@string/simple_sentence_which_helps_you_to_remember"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonStyle"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_leitner_guide"
            android:fontFamily="@font/productsansregular"
            android:textAllCaps="false"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_save_costume_leitner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
