<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tab_leitner_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tab_guide_eng"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/productsansregular"
                android:text="@string/english"
                android:textAllCaps="false"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_tab_guide_per"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tab_guide_per"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/productsansregular"
                android:text="@string/persian"
                android:textAllCaps="false"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_tab_guide_eng"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scroll_per_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dana"
            android:padding="8dp"
            android:text="@string/leitner_guide_per"
            android:visibility="gone" />
    </ScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/scroll_eng_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dana"
            android:padding="8dp"
            android:text="@string/leitner_guide_eng" />
    </ScrollView>

</LinearLayout>