<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yasinhajilou.dileit.view.activity.LeitnerManagerActivity">
    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="40dp"
                android:paddingBottom="30dp"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    app:layout_constraintHorizontal_weight="1"
                    android:fontFamily="@font/productsansregular"
                    android:textSize="42sp"
                    android:textColor="@android:color/white"
                    tools:text="56"
                    app:layout_constraintEnd_toStartOf="@+id/tv_manager_review"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/tv_manager_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    app:layout_constraintHorizontal_weight="1"
                    android:fontFamily="@font/productsansregular"
                    android:textSize="42sp"
                    android:textColor="@android:color/white"
                    tools:text="56"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_manager_learned"
                    app:layout_constraintStart_toEndOf="@+id/tv_manager_new"
                    android:id="@+id/tv_manager_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    app:layout_constraintHorizontal_weight="1"
                    android:fontFamily="@font/productsansregular"
                    android:textSize="42sp"
                    android:textColor="@android:color/white"
                    tools:text="56"
                    app:layout_constraintStart_toEndOf="@+id/tv_manager_review"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/tv_manager_learned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.Toolbar
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                android:id="@+id/toolbar_leitner_manager"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/view_pager_leitner_manager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.tabs.TabLayout
                app:tabIconTint="@android:color/white"
                app:tabTextColor="@android:color/white"
                app:tabSelectedTextColor="?attr/colorAccent"
                android:background="?attr/colorPrimary"
                android:id="@+id/tab_leitner_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:text="@string/new_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/learned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.tabs.TabLayout>
        </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
